--- a/css/error.css
+++ b/css/error.css
@@ -5,6 +5,7 @@ body { background-color:#dbcfb2; color:white; font-family: 'Source Sans Pro', sa
 
 #gif { width: 35%; position: absolute; top: 200px; left: 120px; border: 25px solid #aa895e;}
 #inicio {width: 10%; position: absolute; top: 73%; left: 21%;  font-size: small; line-height: 45px; background-color: #aa895e;}
+a {text-decoration: none; color:white;} 
 
 .logo {position: absolute;} 
     #logoimg { height: 300px; padding: 10px; padding-left: 20px;} 
