--- a/css/error.css
+++ b/css/error.css
@@ -14,26 +14,41 @@ a {text-decoration: none; color:white;}
 .contenedor {width: 42%; position: absolute; left: 51%; top: 120px;}
 
 @keyframes disco {
-  0% { transform: translateY(0%); animation-play-state: paused;}
-  10% { transform: translateY(0%); }
-  50% { transform: translateY(280%);   }
-  80% { transform: translateY(280%); animation-play-state: paused;}
-  90% { filter: opacity(1); }
+  0% { transform: translateY(0%) rotate(0deg);}
+  10% { transform: translateY(0%) rotate(-10deg); transform-origin: center center; } 
+  50% { transform: translateY(280%) rotate(360deg); filter: opacity(1); transform-origin: center center;  }
+  51% { filter: opacity(0); }
+  80% { transform: translateY(280%) ; animation-play-state: paused; filter: opacity(0);}
   100% { transform: translateY(280%); animation-play-state: paused; filter: opacity(0); }
+  
+}
+
+@keyframes discoroto { 
+  0% { filter: opacity(0); }
+  50% { filter: opacity(0); }
+  50.5% { filter: opacity(1); }
+  90% { filter: opacity(1); }
+  100% { filter: opacity(0);}
+
 }
 
 @keyframes sombra {
-  0% { filter: opacity(0) blur(10px);}
-  90% { filter: opacity(1); }
-  100% { filter: opacity(1) blur(10px);; }
+  0% { filter: opacity(0);}
+  40% { filter: opacity(0) blur(15px); }
+  50% { filter: opacity(1) blur(8px);  }
+  90% { filter: opacity(1) blur(8px); }
+  100% { filter: opacity(0) blur(8px);}
 }
 
 .e404 {position: relative; width: 55%; left: 22%; }
 #disco  {position: absolute; width: 55%; left: 22%; top: -20px;
-    animation-name: disco; animation-duration: 11300ms; animation-iteration-count:infinite;  animation-timing-function: ease-in-out;}
+    animation-name: disco; animation-duration: 11420ms; animation-iteration-count:infinite;  animation-timing-function: ease-in-out; }
     #disco img {width: 100%;}
-.sombra { position: absolute; bottom: 20px; width:150px; height: 10px; border-radius: 50%; background: black; opacity: 0.3;
-    animation-name: sombra; animation-duration: 11300ms; animation-iteration-count:infinite; }
+#discoroto {position: absolute; width: 55%; left: 22%; top: 302%;
+    animation-name: discoroto; animation-duration: 11420ms; animation-iteration-count:infinite;}
+    #discoroto img {width: 100%;}
+.sombra { position: absolute; top: 390%; left: 22%; width:150px; height: 10px; border-radius: 50%; background: black; opacity: 0.5; 
+    animation-name: sombra; animation-duration: 11420ms; animation-iteration-count:infinite; }
 
 #x4 {width: 100%;}
 
