--- a/css/error.css
+++ b/css/error.css
@@ -4,8 +4,9 @@
 body { background-color:#dbcfb2; color:white; font-family: 'Source Sans Pro', sans-serif; font-size:28px; text-align: center; line-height: 70px; }
 
 #gif { width: 35%; position: absolute; top: 200px; left: 120px; border: 25px solid #aa895e;}
-#inicio {width: 10%; position: absolute; top: 80%; left: 23%;  font-size: small; line-height: 45px; background-color: #aa895e;}
+#inicio {width: 10%; position: absolute; top: 80%; left: 22%;  font-size: small; line-height: 45px; background-color: #aa895e;}
 a {text-decoration: none; color:white;} 
+a:hover {color:rgb(31, 31, 31); }
 
 .logo {position: absolute;} 
     #logoimg { height: 300px; padding: 10px; padding-left: 20px;} 
